...
        android:text="Want a quick glimpse?"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#89CAB0"
        android:text="Register Here"
        app:layout_constraintBottom_toTopOf="@+id/guestText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
...
