...
        android:id="@+id/refresh_stocks"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="Refresh the stocks..."
        app:layout_constraintBottom_toTopOf="@+id/stocksRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_refresh_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stocksRecycler"
...
